k8s/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: sbservice
    tier: backend
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: sbservice
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: sbservice
spec:
  selector:
    matchLabels:
      app: sbservice
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: sbservice
        tier: backend
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-claim
      restartPolicy: Always
      containers:
        - name: mysql
          image: mysql:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-storage
          ports:
            - containerPort: 3306
