k8s/springboot.yml
#Create a deployment by using the image pushed to Docker Hub
#containerPort has to be 8081
#while creating the deployment, get the values from ConfigMap and secret and follow the below instructions
#Use the name as `GREETING` for the key which has to accessed from ConfigMap, which is used in the SpringBoot application
#Use the names as follows `MONGO_INITDB_ROOT_USERNAME` - username, `MONGO_INITDB_ROOT_PASSWORD` - password
#for the values access from secret

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      k8.stackroute: sb-deployment
  template:
    metadata:
      labels:
        k8.stackroute: sb-deployment
    spec:
      containers:
        - name: sb-k8-configmap-secret
          image: jaswanth1234/springboot-mysql-cm-secret:1.0
          ports:
            - containerPort: 8081
---
#Create the service of type NodePort and use the above created deployment as selector
#port should be 8081
apiVersion: v1
kind: Service
metadata:
  name: sb-service
  labels:
    app: sb-service
spec:
  type: NodePort
  ports:
    - nodePort: 31000
      port: 8081
      targetPort: 8081
  selector:
    k8.stackroute: sb-deployment
