k8s/ingress.yml
#apply ingress to the service used to expose the Spring Boot app
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: sb-service
    servicePort: 8081
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: sb-service
              servicePort: 8081
